Небольшие правки текста демки

--- a/demos/index.html
+++ b/demos/index.html
@@ -70,6 +70,8 @@
 		</script>
 	</head>
 	<body>
-		Page content
+		<div class="b-content">
+			Look in console for debug info
+		</div>
 	</body>
 </html>
