Добавлен хелпер логирования. Поправлена сборка проекта. Добавлены неймспейсы в модули

--- a/demos/index.html
+++ b/demos/index.html
@@ -6,7 +6,7 @@
 		<title>requrejs-sandbox demo</title>
 		<link rel="stylesheet" type="text/css" href="../static/styles/css/main.css">
 		<script src="../static/js/libs/require.min.js"></script>
-		<script src="../build/requirejs-sandbox.min.js"></script>
+		<script src="../build/requirejs-sandbox.js"></script>
 		<script>
 			// Необходимо до тех пор пока в модуле `requirejs-sandbox` используется `underscore`, 
 			// как зависимость.
