Добавлены тесты на юзкейсы создания и удаления песочницы + сделан небольшой багфикс (https://trello.com/c/4ljx0BJX/1--)

--- a/tests/module.html
+++ b/tests/module.html
@@ -10,7 +10,7 @@
 	<div id="qunit-fixture"></div>
 	<script src="static/qunit.js"></script>
 	<script src="../static/js/libs/require.min.js"></script>
-	<script src="../build/requirejs-sandbox.min.js"></script>
+	<script src="../build/requirejs-sandbox.js"></script>
 	<script src="module.js"></script>
 </body>
 </html>
