Багфикс загрузки стилей, когда резолв имени не учитывал path из конфига require.js

--- a/demos/index.html
+++ b/demos/index.html
@@ -4,7 +4,6 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<title>requrejs-sandbox demo</title>
-		<link rel="stylesheet" type="text/css" href="../static/styles/css/main.css">
 		<script src="../static/js/libs/require.min.js"></script>
 		<script src="../build/requirejs-sandbox.js"></script>
 		<script>
@@ -18,6 +17,7 @@
 					requireConfig: {
 						baseUrl: '../static/js/app',
 						paths: {
+							'css': '../../styles/css',
 							'backbone': '../libs/backbone',
 							'jquery': '../libs/jquery/jquery.min',
 							'underscore': '../libs/underscore.min'
@@ -34,7 +34,7 @@
 					},
 					callback: function(require) {
 						// Пытаемся загрузить в песочницу вью и инициализировать ее.
-						require(['views/workspace'], function(Workspace) {
+						require(['views/workspace', 'css!css/main'], function(Workspace, styles) {
 							var workspace = new Workspace;
 						});
 					}
