--- a/demos/basic/index.html
+++ b/demos/basic/index.html
@@ -4,8 +4,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<title>requrejs-sandbox demo</title>
-		<script src="../static/js/libs/require.min.js"></script>
-		<script src="../build/requirejs-sandbox.js"></script>
+		<script src="../../static/js/libs/require.min.js"></script>
+		<script src="../../build/requirejs-sandbox.js"></script>
 		<script>
 			requirejs(['requirejs-sandbox'], function(requrejsSandbox) {
 				console.log('requirejs-sandbox api', requrejsSandbox);
@@ -13,14 +13,14 @@
 				// Инициализируем песочницу для первого приложения и пытаемся загрузить в нее 
 				// вью `workspace`.
 				requrejsSandbox.set('CustomDemoApp', {
-					requireUrl: '../static/js/libs/require.min.js',
+					requireUrl: '../../static/js/libs/require.min.js',
 					requireConfig: {
-						baseUrl: '../static/js/app',
+						baseUrl: 'app',
 						paths: {
-							'css': '../../styles/css',
-							'backbone': '../libs/backbone',
-							'jquery': '../libs/jquery/jquery.min',
-							'underscore': '../libs/underscore.min'
+							'css': '../../../static/styles/css',
+							'backbone': '../../../static/js/libs/backbone',
+							'jquery': '../../../static/js/libs/jquery/jquery.min',
+							'underscore': '../../../static/js/libs/underscore.min'
 						},
 						shim: {
 							underscore: {
@@ -45,8 +45,8 @@
 				// Конфигурированием и загрузкой в данном случае будет заниматься 
 				// файл `/app/main.js`.
 				requrejsSandbox.set('DemoApp', {
-					requireUrl: '../static/js/libs/require.min.js',
-					requireMain: '../static/js/app/main'
+					requireUrl: '../../static/js/libs/require.min.js',
+					requireMain: 'app/main'
 				});
 			});
 		</script>
