Рефакторинг тестов и попытка подключения к travis-cl

--- a/test/index.html
+++ b/test/index.html
@@ -4,13 +4,13 @@
 	<meta charset="utf-8">
 	<title>requrejs-sandbox grunt test suite</title>
 	<link rel="stylesheet" href="static/qunit.css">
+	<script src="static/qunit.js"></script>
+	<script src="../static/js/libs/require.min.js"></script>
+	<script src="../build/requirejs-sandbox.js"></script>
+	<script src="requirejs-sandbox.test.js"></script>
 </head>
 <body>
 	<div id="qunit"></div>
 	<div id="qunit-fixture"></div>
-	<script src="static/qunit.js"></script>
-	<script src="../static/js/libs/require.min.js"></script>
-	<script src="../build/requirejs-sandbox.js"></script>
-	<script src="module.js"></script>
 </body>
 </html>
