--- a/demos/basic/index.html
+++ b/demos/basic/index.html
@@ -32,6 +32,7 @@
 							}
 						}
 					},
+					patch: ['jquery'],
 					callback: function(require) {
 						// Пытаемся загрузить в песочницу вью и инициализировать ее.
 						require(['views/workspace', 'css!css/main'], function(Workspace, styles) {
@@ -46,7 +47,8 @@
 				// файл `/app/main.js`.
 				requrejsSandbox.set('DemoApp', {
 					requireUrl: '../../static/js/libs/require.min.js',
-					requireMain: 'app/main'
+					requireMain: 'app/main',
+					patch: ['jquery']
 				});
 			});
 		</script>
