--- a/demos/multiple-jquery/index.html
+++ b/demos/multiple-jquery/index.html
@@ -6,7 +6,7 @@
 		<title>requrejs-sandbox demo</title>
 		<link rel="stylesheet" type="text/css" href="../../static/styles/css/main.css">
 		<script src="../../static/js/libs/require.min.js"></script>
-		<script src="../../build/requirejs-sandbox.min.js"></script>
+		<script src="../../build/requirejs-sandbox.js"></script>
 		<script>
 			requirejs(['requirejs-sandbox'], function(requrejsSandbox) {
 				var jQueryCollection = ['1.6.4', '1.7.2', '1.8.3', '1.9.1', '2.0.2'],
@@ -46,10 +46,11 @@
 								}
 							}
 						},
+						patch: ['jquery'],
 						callback: function(require) {
 							var sandbox = this;
 
-							require(['transit!jquery'], function($) {
+							require(['jquery'], function($) {
 								renderBlock(sandbox.name, $);
 							});
 						}
