--- a/tests/patches.html
+++ b/tests/patches.html
@@ -10,7 +10,7 @@
 	</script>
 	<script src="../static/js/libs/require.min.js"></script>
 	<script src="../build/requirejs-sandbox.js"></script>
-	<script src="transits.test.js"></script>
+	<script src="patches.test.js"></script>
 </head>
 <body>
 	<div id="qunit"></div>
