--- a/demos/basic/index.html
+++ b/demos/basic/index.html
@@ -8,7 +8,7 @@
 		<script src="../../plugins/require-css.js"></script>
 		<script src="../../build/requirejs-sandbox.js"></script>
 		<script>
-			requirejs(['requirejs-sandbox'], function(requrejsSandbox) {
+			requirejs(['requirejs-sandbox', 'requirejs-css'], function(requrejsSandbox, requirejsCss) {
 				console.log('requirejs-sandbox api', requrejsSandbox);
 
 				// Инициализируем песочницу для первого приложения и пытаемся загрузить в нее 
@@ -34,7 +34,7 @@
 						}
 					},
 					patch: ['jquery'],
-					plugins: ['css'],
+					plugins: [requirejsCss],
 					callback: function(require) {
 						// Пытаемся загрузить в песочницу вью и инициализировать ее.
 						require(['views/workspace', 'css!css/main'], function(Workspace, styles) {
@@ -51,7 +51,7 @@
 					requireUrl: '../../static/js/libs/require.min.js',
 					requireMain: 'app/main',
 					patch: ['jquery'],
-					plugins: ['css']
+					plugins: [requirejsCss]
 				});
 			});
 		</script>
