--- a/tests/app.html
+++ b/tests/app.html
@@ -9,6 +9,7 @@
 		QUnit.config.autostart = false;
 	</script>
 	<script src="../static/js/libs/require.min.js"></script>
+	<script src="../plugins/require-css.js"></script>
 	<script src="../build/requirejs-sandbox.js"></script>
 	<script src="app.test.js"></script>
 </head>
