--- a/tests/plugins.html
+++ b/tests/plugins.html
@@ -9,7 +9,7 @@
 		QUnit.config.autostart = false;
 	</script>
 	<script src="../static/js/libs/require.min.js"></script>
-	<script src="../plugins/require-css.js"></script>
+	<script src="../build/plugins/require-css.min.js"></script>
 	<script src="../build/requirejs-sandbox.js"></script>
 	<script src="plugins.test.js"></script>
 </head>
