--- a/demos/basic/index.html
+++ b/demos/basic/index.html
@@ -14,7 +14,6 @@
 				// Инициализируем песочницу для первого приложения и пытаемся загрузить в нее 
 				// вью `workspace`.
 				requrejsSandbox.set('CustomDemoApp', {
-					requireUrl: '../../static/js/libs/require.min.js',
 					requireConfig: {
 						baseUrl: 'app',
 						paths: {
@@ -35,7 +34,7 @@
 					},
 					patch: ['jquery'],
 					plugins: [requirejsCss],
-					callback: function(require) {
+					success: function(require) {
 						// Пытаемся загрузить в песочницу вью и инициализировать ее.
 						require(['views/workspace', 'css!css/main'], function(Workspace, styles) {
 							var workspace = new Workspace;
@@ -48,7 +47,6 @@
 				// Конфигурированием и загрузкой в данном случае будет заниматься 
 				// файл `/app/main.js`.
 				requrejsSandbox.set('DemoApp', {
-					requireUrl: '../../static/js/libs/require.min.js',
 					requireMain: 'app/main',
 					patch: ['jquery'],
 					plugins: [requirejsCss]
