Fixed all demos and tests + added minification tasks for patches

--- a/demos/basic/index.html
+++ b/demos/basic/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<title>requrejs-sandbox demo</title>
 		<script src="../../static/js/libs/require.min.js"></script>
-		<script src="../../patches/jquery.js"></script>
+		<script src="../../build/patches/jquery.min.js"></script>
 		<script src="../../build/plugins/require-css.min.js"></script>
 		<script src="../../build/requirejs-sandbox.js"></script>
 		<script>
