--- a/demos/bootstrap/index.html
+++ b/demos/bootstrap/index.html
@@ -11,6 +11,7 @@
 		<script src="app/libs/jquery.min.js"></script>
 		<script src="app/libs/bootstrap.js"></script>
 		<script src="../../static/js/libs/require.min.js"></script>
+		<script src="../../build/patches/jquery.min.js"></script>
 		<script src="../../build/requirejs-sandbox.js"></script>
 		<script>
 			$(function() {
