--- a/demos/multiple-jquery/index.html
+++ b/demos/multiple-jquery/index.html
@@ -6,6 +6,7 @@
 		<title>requrejs-sandbox demo</title>
 		<link rel="stylesheet" type="text/css" href="../../static/styles/css/main.css">
 		<script src="../../static/js/libs/require.min.js"></script>
+		<script src="../../build/patches/jquery.min.js"></script>
 		<script src="../../build/requirejs-sandbox.js"></script>
 		<script>
 			requirejs(['requirejs-sandbox'], function(requrejsSandbox) {
