--- a/tests/patches.html
+++ b/tests/patches.html
@@ -9,6 +9,7 @@
 		QUnit.config.autostart = false;
 	</script>
 	<script src="../static/js/libs/require.min.js"></script>
+	<script src="../build/patches/jquery.min.js"></script>
 	<script src="../build/requirejs-sandbox.js"></script>
 	<script src="patches.test.js"></script>
 </head>
