--- a/demos/todomvc/index.html
+++ b/demos/todomvc/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-framework="angularjs">
 	<head>
 		<meta charset="utf-8">
-		<title>test</title>
+		<title>requrejs-sandbox demo</title>
 		<link rel="stylesheet" href="bower_components/todomvc-common/base.css">
 		<style>[ng-cloak] { display: none; }</style>
 		<script>
@@ -19,7 +19,7 @@
 		<div id="angular" class="angular-app">
 			<section id="todoapp" ng-controller="TodoController">
 				<header id="header">
-					<h1>todos</h1>
+					<h1>angular</h1>
 					<form id="todo-form" ng-submit="addTodo()">
 						<input id="new-todo" placeholder="What needs to be done?" ng-model="newTodo" autofocus>
 					</form>
@@ -73,7 +73,7 @@
 		<div id="backbone" class="backbone-app">
 			<section id="todoapp">
 				<header id="header">
-					<h1>todos</h1>
+					<h1>backbone</h1>
 					<input id="new-todo" placeholder="What needs to be done?" autofocus>
 				</header>
 				<section id="main">
