--- a/demos/todomvc/index.html
+++ b/demos/todomvc/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>requrejs-sandbox demo</title>
-		<link rel="stylesheet" href="bower_components/todomvc-common/base.css">
+		<link rel="stylesheet" href="../../bower_components/todomvc-common/base.css">
 		<style>[ng-cloak] { display: none; }</style>
 		<script>
 			// Include angular-loader to allow modules to be loaded in any order.
@@ -89,8 +89,8 @@
 				<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 			</footer>
 		</div>
-		<script src="bower_components/todomvc-common/base.js"></script>
-		<script data-main="js/main" src="bower_components/requirejs/require.js"></script>
+		<script src="../../bower_components/todomvc-common/base.js"></script>
+		<script data-main="js/main" src="../../bower_components/requirejs/require.js"></script>
 		<script src="../../build/patches/jquery.min.js"></script>
 		<script src="../../build/requirejs-sandbox.js"></script>
 	</body>
