--- a/tests/plugins.html
+++ b/tests/plugins.html
@@ -8,7 +8,7 @@
 	<script type="text/javascript">
 		QUnit.config.autostart = false;
 	</script>
-	<script src="../static/js/libs/require.min.js"></script>
+	<script src="../bower_components/requirejs/require.js"></script>
 	<script src="../build/plugins/require-css.min.js"></script>
 	<script src="../build/requirejs-sandbox.js"></script>
 	<script src="plugins.test.js"></script>
