--- a/demos/basic/index.html
+++ b/demos/basic/index.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<title>requrejs-sandbox demo</title>
-		<script src="../../static/js/libs/require.min.js"></script>
+		<script src="../../bower_components/requirejs/require.js"></script>
 		<script src="../../build/patches/jquery.min.js"></script>
 		<script src="../../build/plugins/require-css.min.js"></script>
 		<script src="../../build/requirejs-sandbox.js"></script>
@@ -19,9 +19,9 @@
 						baseUrl: 'app',
 						paths: {
 							'css': '../../../static/styles/css',
-							'backbone': '../../../static/js/libs/backbone',
-							'jquery': '../../../static/js/libs/jquery/jquery.min',
-							'underscore': '../../../static/js/libs/underscore.min'
+							'jquery': '../../../bower_components/jquery/jquery',
+							'backbone': '../../../bower_components/backbone/backbone',
+							'underscore': '../../../bower_components/underscore/underscore'
 						},
 						shim: {
 							underscore: {
