--- a/demos/multiple-jquery/index.html
+++ b/demos/multiple-jquery/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<title>requrejs-sandbox demo</title>
 		<link rel="stylesheet" type="text/css" href="../../static/styles/css/main.css">
-		<script src="../../static/js/libs/require.min.js"></script>
+		<script src="../../../../bower_components/requirejs/require.js"></script>
 		<script src="../../build/patches/jquery.min.js"></script>
 		<script src="../../build/requirejs-sandbox.js"></script>
 		<script>
