Fixed broken demos

--- a/demos/bootstrap/index.html
+++ b/demos/bootstrap/index.html
@@ -5,12 +5,12 @@
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<title>requrejs-sandbox demo</title>
 
-		<link href="../../../../bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" type="text/css" />
+		<link href="../../bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" type="text/css" />
 		<link rel="stylesheet" type="text/css" href="../../static/styles/css/main.css">
 
 		<script src="app/libs/jquery.min.js"></script>
-		<script src="../../../../bower_components/bootstrap/dist/js/bootstrap.js"></script>
-		<script src="../../../../bower_components/requirejs/require.js"></script>
+		<script src="../../bower_components/bootstrap/dist/js/bootstrap.js"></script>
+		<script src="../../bower_components/requirejs/require.js"></script>
 		<script src="../../build/patches/jquery.min.js"></script>
 		<script src="../../build/requirejs-sandbox.js"></script>
 		<script>
