--- a/demos/multiple-jquery/index.html
+++ b/demos/multiple-jquery/index.html
@@ -4,8 +4,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<title>requrejs-sandbox demo</title>
+
 		<link rel="stylesheet" type="text/css" href="../../static/styles/css/main.css">
-		<script src="../../../../bower_components/requirejs/require.js"></script>
+
+		<script src="../../bower_components/requirejs/require.js"></script>
 		<script src="../../build/patches/jquery.min.js"></script>
 		<script src="../../build/requirejs-sandbox.js"></script>
 		<script>
