Fixed bugs with jquery patch selectors for rare use cases + added tests for those cases

--- a/tests/patches.html
+++ b/tests/patches.html
@@ -9,12 +9,15 @@
 		QUnit.config.autostart = false;
 	</script>
 	<script src="../bower_components/requirejs/require.js"></script>
-	<script src="../build/patches/jquery.min.js"></script>
+	<script src="../build/patches/jquery.js"></script>
 	<script src="../build/requirejs-sandbox.js"></script>
 	<script src="patches.test.js"></script>
 </head>
 <body>
 	<div id="qunit"></div>
 	<div id="qunit-fixture"></div>
+	<div id="test-container">
+		<div class="element1 some-class"></div>
+	</div>
 </body>
 </html>
