--- a/tests/patches.html
+++ b/tests/patches.html
@@ -9,7 +9,7 @@
 		QUnit.config.autostart = false;
 	</script>
 	<script src="../bower_components/requirejs/require.js"></script>
-	<script src="../build/patches/jquery.js"></script>
+	<script src="../build/patches/jquery.min.js"></script>
 	<script src="../build/requirejs-sandbox.js"></script>
 	<script src="patches.test.js"></script>
 </head>
