--- a/tests/patches.html
+++ b/tests/patches.html
@@ -17,7 +17,15 @@
 	<div id="qunit"></div>
 	<div id="qunit-fixture"></div>
 	<div id="test-container">
-		<div class="element1 some-class"></div>
+		<div class="element1 some-class">
+			<ul>
+				<li>
+					<ul>
+						<li></li>
+					</ul>
+				</li>
+			</ul>
+		</div>
 	</div>
 </body>
 </html>
