Created first working prototype of preprocess plugin + added demo

--- a/demos/bootstrap/index.html
+++ b/demos/bootstrap/index.html
@@ -6,7 +6,7 @@
 		<title>requrejs-sandbox demo</title>
 
 		<link href="../../bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" type="text/css" />
-		<link rel="stylesheet" type="text/css" href="../../static/styles/css/main.css">
+		<link rel="stylesheet" type="text/css" href="../../static/styles/css/main.css" />
 
 		<script src="app/libs/jquery.min.js"></script>
 		<script src="../../bower_components/bootstrap/dist/js/bootstrap.js"></script>
