--- a/demos/preprocess/index.html
+++ b/demos/preprocess/index.html
@@ -34,6 +34,27 @@
 									// Запускаем измененный код.
 									widget.run();
 								});
+
+							// Делаем загрузку простого скрипта, который пытается получить текущий url
+							require(['preprocess!code', 'code'], function(codeProcessor) {
+								codeProcessor
+									// Делаем простую замену строк для отличия от обычного кода
+									.replace('Current', 'Current page')
+
+									// Делаем замену jquery domReady на обычный return всей функции.
+									// Это позволит получить эту функцию в колбеке метода `resolve`
+									.replace('$(fu', 'return (fu')
+
+									// Делаем автоматический врапинг кода чтоб при обращении к 
+									// приватным свойствам объекта `window` он автоматически 
+									// ссылался на свойства родительского объекта `window`.
+									.autoWrap()
+									.resolve(function(codeProcessedFn) {
+										// Получаем и исполняем функцию, которую мы загрузили и 
+										// отпроцессили до этого.
+										codeProcessedFn();
+									});
+							});
 						});
 					}
 				});
