Bugfix + finished test for simple scripts preprocessing

--- a/tests/preprocess.html
+++ b/tests/preprocess.html
@@ -10,6 +10,8 @@
 	</script>
 	<script src="../bower_components/requirejs/require.js"></script>
 	<script src="../build/requirejs-sandbox.js"></script>
+	<script src="../build/plugins/require-css.min.js"></script>
+	<script src="../build/plugins/require-preprocess-css.min.js"></script>
 	<script src="preprocess.test.js"></script>
 </head>
 <body>
