Added version widget

--- a/demos/multiple-jquery/index.html
+++ b/demos/multiple-jquery/index.html
@@ -9,7 +9,9 @@
 
 		<script src="../../bower_components/requirejs/require.js"></script>
 		<script src="../../build/patches/jquery.min.js"></script>
+		<script src="../../build/plugins/require-css.min.js"></script>
 		<script src="../../build/requirejs-sandbox.js"></script>
+		<script src="../../static/apps/version.js"></script>
 		<script>
 			requirejs(['requirejs-sandbox'], function(requrejsSandbox) {
 				var jQueryCollection = ['1.6.4', '1.7.2', '1.8.3', '1.9.1', '2.0.2'],
