--- a/demos/todomvc/index.html
+++ b/demos/todomvc/index.html
@@ -92,6 +92,8 @@
 		<script src="../../bower_components/todomvc-common/base.js"></script>
 		<script data-main="js/main" src="../../bower_components/requirejs/require.js"></script>
 		<script src="../../build/patches/jquery.min.js"></script>
+		<script src="../../build/plugins/require-css.min.js"></script>
 		<script src="../../build/requirejs-sandbox.js"></script>
+		<script src="../../static/apps/version.js"></script>
 	</body>
 </html>
