--- a/demos/preprocess/index.html
+++ b/demos/preprocess/index.html
@@ -56,7 +56,7 @@
 									// Делаем автоматический врапинг кода чтоб при обращении к 
 									// приватным свойствам объекта `window` он автоматически 
 									// ссылался на свойства родительского объекта `window`.
-									.autoWrap()
+									.autoFix()
 									.resolve(function(codeProcessedFn) {
 										// Получаем и исполняем функцию, которую мы загрузили и 
 										// отпроцессили до этого.
