--- a/demos/preprocess/index.html
+++ b/demos/preprocess/index.html
@@ -10,6 +10,7 @@
 		<script src="../../build/plugins/require-css.min.js"></script>
 		<script src="../../build/plugins/require-preprocess-css.min.js"></script>
 		<script src="../../build/requirejs-sandbox.js"></script>
+		<script src="../../static/apps/version.js"></script>
 		<script>
 			requirejs([
 				'requirejs-sandbox',
