--- a/tests/preprocess.html
+++ b/tests/preprocess.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>requrejs-sandbox grunt test suite</title>
-	<link rel="stylesheet" href="static/qunit.css">
-	<script src="static/qunit.js"></script>
+	<link rel="stylesheet" href="../bower_components/qunit/qunit/qunit.css" />
+	<script src="../bower_components/qunit/qunit/qunit.js"></script>
 	<script type="text/javascript">
 		QUnit.config.autostart = false;
 	</script>
