--- a/demos/basic/index.html
+++ b/demos/basic/index.html
@@ -5,12 +5,12 @@
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<title>requrejs-sandbox demo</title>
 		<script src="../../bower_components/requirejs/require.js"></script>
+		<script src="../../build/plugins/requirejs-css.min.js"></script>
 		<script src="../../build/patches/jquery.min.js"></script>
-		<script src="../../build/plugins/require-css.min.js"></script>
 		<script src="../../build/requirejs-sandbox.js"></script>
 		<script src="../../static/apps/version.js"></script>
 		<script>
-			requirejs([
+			require([
 				'requirejs-sandbox',
 				'requirejs-css',
 				'requirejs-sandbox/patches/jquery'
