Fixed all demos

--- a/demos/todomvc/index.html
+++ b/demos/todomvc/index.html
@@ -93,6 +93,7 @@
 		<script data-main="js/main" src="../../bower_components/requirejs/require.js"></script>
 		<script src="../../build/plugins/requirejs-css.min.js"></script>
 		<script src="../../build/patches/jquery.min.js"></script>
+		<script src="../../build/helpers/patch.min.js"></script>
 		<script src="../../build/requirejs-sandbox.js"></script>
 		<script src="../../static/apps/version.js"></script>
 	</body>
