--- a/demos/preprocess/index.html
+++ b/demos/preprocess/index.html
@@ -17,8 +17,8 @@
 				'requirejs-css',
 				'requirejs-preprocess-css',
 				'requirejs-sandbox/patches/jquery'
-			], function(requrejsSandbox, requirejsCss, requirejsPreprocessCss, jqueryPatch) {
-				requrejsSandbox.set('PreprocessDemoApp', {
+			], function(requirejsSandbox, requirejsCss, requirejsPreprocessCss, jqueryPatch) {
+				requirejsSandbox.set('PreprocessDemoApp', {
 					requireConfig: {
 						baseUrl: 'app',
 						paths: {
