--- a/demos/basic/index.html
+++ b/demos/basic/index.html
@@ -14,12 +14,12 @@
 				'requirejs-sandbox',
 				'requirejs-css',
 				'requirejs-sandbox/patches/jquery'
-			], function(requrejsSandbox, requirejsCss, jqueryPatch) {
-				console.log('requirejs-sandbox api', requrejsSandbox);
+			], function(requirejsSandbox, requirejsCss, jqueryPatch) {
+				console.log('requirejs-sandbox api', requirejsSandbox);
 
 				// Инициализируем песочницу для первого приложения и пытаемся загрузить в нее 
 				// вью `workspace`.
-				requrejsSandbox.set('CustomDemoApp', {
+				requirejsSandbox.set('CustomDemoApp', {
 					requireConfig: {
 						baseUrl: 'app',
 						paths: {
@@ -52,7 +52,7 @@
 				// 
 				// Конфигурированием и загрузкой в данном случае будет заниматься 
 				// файл `/app/main.js`.
-				requrejsSandbox.set('DemoApp', {
+				requirejsSandbox.set('DemoApp', {
 					requireMain: 'app/main',
 					patch: [jqueryPatch],
 					plugins: [requirejsCss]
