--- a/tests/app.html
+++ b/tests/app.html
@@ -9,8 +9,7 @@
 		QUnit.config.autostart = false;
 	</script>
 	<script src="../bower_components/requirejs/require.js"></script>
-	<script src="../build/patches/jquery.min.js"></script>
-	<script src="../build/requirejs-sandbox.js"></script>
+	<script src="config/config.js"></script>
 	<script src="app.test.js"></script>
 </head>
 <body>
