--- a/tests/iframe-resolver.html
+++ b/tests/iframe-resolver.html
@@ -9,6 +9,7 @@
 		QUnit.config.autostart = false;
 	</script>
 	<script src="../bower_components/requirejs/require.js"></script>
+	<script src="config/config.js"></script>
 	<script type="text/javascript">
 		require.config({
 			baseUrl: '../src',
@@ -17,7 +18,6 @@
 			}
 		});
 	</script>
-	<script src="../build/requirejs-sandbox.js"></script>
 	<script src="iframe-resolver.test.js"></script>
 </head>
 <body>
