--- a/tests/options-resolver.html
+++ b/tests/options-resolver.html
@@ -9,6 +9,7 @@
 		QUnit.config.autostart = false;
 	</script>
 	<script src="../bower_components/requirejs/require.js"></script>
+	<script src="config/config.js"></script>
 	<script type="text/javascript">
 		require.config({
 			baseUrl: '../src',
