--- a/tests/plugins.html
+++ b/tests/plugins.html
@@ -9,8 +9,7 @@
 		QUnit.config.autostart = false;
 	</script>
 	<script src="../bower_components/requirejs/require.js"></script>
-	<script src="../build/plugins/requirejs-css.min.js"></script>
-	<script src="../build/requirejs-sandbox.js"></script>
+	<script src="config/config.js"></script>
 	<script src="plugins.test.js"></script>
 </head>
 <body>
